@@ -1,6 +1,8 @@
 Development Portal (2020-04-14 shi)
 ==============================
 Update glossary for search
+Update placeholder text for activity list query
+Display rows when only result period and no value is found
 
 
 Development Portal (2020-04-12 shi)
